# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

module_output_path = "kv_store/distributed_test"

###############################################################################
config("module_private_config") {
  include_dirs = [
    "${kv_store_base_path}/test/distributedtest/single_kvstore_client",
    "${kv_store_base_path}/interfaces/innerkits/distributeddata/include",
    "${kv_store_base_path}/frameworks/common",
    "${kv_store_base_path}/frameworks/distributeddatafwk/include",
    "${kv_store_base_path}/frameworks/distributeddatafwk/src",
    "${kv_store_base_path}/frameworks/kvdb/include",
  ]
}

common_deps = [
  "${kv_store_base_path}/frameworks/libs/distributeddb:distributeddb",
  "${kv_store_base_path}/interfaces/innerkits/distributeddata:distributeddata_inner",
  "${third_party_path}/googletest:gtest",
]

common_external_deps = [
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "c_utils:utils",
  "device_manager:devicemanagersdk",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "hitrace:hitrace_meter",
  "hitrace:libhitracechain",
  "huks:libhukssdk",
  "ipc:ipc_single",
  "samgr:samgr_proxy",
]

###############################################################################
ohos_distributedtest("DistributedTest") {
  module_out_path = module_output_path

  sources = [ "distributed_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  deps = common_deps
}

ohos_distributedtest("DistributedTestAgent") {
  module_out_path = module_output_path

  sources = [ "distributed_test_agent.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = common_external_deps

  deps = common_deps
}

###############################################################################
group("distributedtest") {
  testonly = true

  deps = [
    ":DistributedTest",
    ":DistributedTestAgent",
  ]
}
###############################################################################
