# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("TypesUtilFuzzTest") {
  module_out_path = "kv_store/distributeddata"

  include_dirs = [
    "ipc/interfaces/innerkits/ipc_core/include",
    "../../../frameworks/common",
    "../../../frameworks/innerkitsimpl/distributeddatafwk/include",
    "../../../frameworks/innerkitsimpl/distributeddatafwk/src",
    "../../../frameworks/innerkitsimpl/kvdb/include",
    "../../../frameworks/innerkitsimpl/kvdb/src",
    "../../../interfaces/innerkits/distributeddata/include",
  ]

  fuzz_config_file = "../../../test/fuzztest/blob_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "//foundation/distributeddatamgr/kv_store/frameworks/innerkitsimpl/distributeddatafwk/src/blob.cpp",
    "//foundation/distributeddatamgr/kv_store/frameworks/innerkitsimpl/distributeddatafwk/src/change_notification.cpp",
    "//foundation/distributeddatamgr/kv_store/frameworks/innerkitsimpl/kvdb/src/kv_types_util.cpp",
    "typesutil_fuzzer.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TypesUtilFuzzTest",
  ]
}
###############################################################################
