# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

module_output_path = "kv_store/distributeddatafwk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../include/",
    "../../../../interfaces/innerkits/distributeddata/",

    # TEMP MODIFICATION FOR PMS
    "../../../../services/distributeddataservice/app/include",

    # for ipc_core interfaces.
    "//commonlibrary/c_utils/base/include",
    "//foundation/distributeddatamgr/data_share/interfaces/inner_api/common/include",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata/include",
  ]
}

ohos_unittest("DistributedKvDataManagerTest") {
  module_out_path = module_output_path

  sources = [ "unittest/distributed_kv_data_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("DistributedKvDataManagerEncryptTest") {
  module_out_path = module_output_path

  sources = [ "unittest/distributed_kv_data_manager_encrypt_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("LocalSubscribeStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/local_subscribe_store_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("LocalSubscribeDeviceStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/local_subscribe_device_store_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("SingleKvStoreClientQueryTest") {
  module_out_path = module_output_path

  sources = [ "unittest/single_kvstore_client_query_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("SingleKvStoreClientTest") {
  module_out_path = module_output_path

  sources = [ "unittest/single_kvstore_client_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("DeviceKvStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/device_kvstore_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("BlobTest") {
  module_out_path = module_output_path

  sources = [ "unittest/blob_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
  ]
}

ohos_unittest("TypesUtilTest") {
  module_out_path = module_output_path

  sources = [ "unittest/types_util_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":BlobTest",
    ":DeviceKvStoreTest",
    ":DistributedKvDataManagerEncryptTest",
    ":DistributedKvDataManagerTest",
    ":LocalSubscribeDeviceStoreTest",
    ":LocalSubscribeStoreTest",
    ":SingleKvStoreClientQueryTest",
    ":SingleKvStoreClientTest",
    ":TypesUtilTest",
  ]
}
