# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

module_output_path = "kv_store/distributeddatafwk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../include/",
    "../src/",
    "../../distributeddatasvc/include/",
    "../../kvdb/include/",
    "../../kvdb/src/",
    "../../../common/",
    "../../../../interfaces/innerkits/distributeddata/include/",
    "../../../../interfaces/innerkits/distributeddatamgr/include/",

    # for ipc_core interfaces.
    "//commonlibrary/c_utils/base/include",
    "//foundation/distributeddatamgr/data_share/interfaces/inner_api/common/include",
    "//foundation/distributeddatamgr/data_share/interfaces/inner_api/provider/include",
    "//foundation/distributeddatamgr/kv_store/interfaces/innerkits/distributeddata/include",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
  ]
}

###############################################################################
ohos_source_set("distributeddatafwk_src_file") {
  testonly = true

  old_sources = [
    "../../distributeddatasvc/src/datamgr_service_proxy.cpp",
    "../../distributeddatasvc/src/distributed_data_mgr.cpp",
    "../../distributeddatasvc/src/kvstore_data_service_mgr.cpp",
    "../src/blob.cpp",
    "../src/change_notification.cpp",
    "../src/data_query.cpp",
    "../src/distributed_kv_data_manager.cpp",
    "../src/ikvstore_client_death_observer.cpp",
    "../src/ikvstore_observer.cpp",
    "../src/kv_utils.cpp",
    "../src/kvdb_notifier_client.cpp",
    "../src/kvdb_notifier_stub.cpp",
    "../src/kvstore_client_death_observer.cpp",
    "../src/kvstore_datashare_bridge.cpp",
    "../src/kvstore_observer_client.cpp",
    "../src/kvstore_service_death_notifier.cpp",
    "../src/sync_observer.cpp",
  ]

  kvdb_sources = [
    "../../kvdb/src/backup_manager.cpp",
    "../../kvdb/src/convertor.cpp",
    "../../kvdb/src/data_change_notifier.cpp",
    "../../kvdb/src/dev_manager.cpp",
    "../../kvdb/src/device_convertor.cpp",
    "../../kvdb/src/kv_types_util.cpp",
    "../../kvdb/src/kvdb_service_client.cpp",
    "../../kvdb/src/observer_bridge.cpp",
    "../../kvdb/src/process_communication_impl.cpp",
    "../../kvdb/src/process_system_api_adapter_impl.cpp",
    "../../kvdb/src/security_manager.cpp",
    "../../kvdb/src/single_store_impl.cpp",
    "../../kvdb/src/store_factory.cpp",
    "../../kvdb/src/store_manager.cpp",
    "../../kvdb/src/store_result_set.cpp",
    "../../kvdb/src/store_util.cpp",
    "../../kvdb/src/system_api.cpp",
    "../../kvdb/src/task_executor.cpp",
    "../../kvdb/src/task_executor_adapter.cpp",
  ]

  sources = old_sources + kvdb_sources
  configs = [ ":module_private_config" ]

  deps = [
    "../../../../databaseutils:database_utils",
    "../../../../interfaces/innerkits/distributeddatamgr:distributeddata_mgr",
    "//foundation/distributeddatamgr/kv_store/frameworks/libs/distributeddb:distributeddb",
    "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp:devicemanagersdk",
  ]
  external_deps = [
    "c_utils:utils",
    "file_api:securitylabel",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "huks:libhukssdk",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  part_name = "kv_store"
}

ohos_unittest("DistributedKvDataManagerTest") {
  module_out_path = module_output_path

  sources = [ "unittest/distributed_kv_data_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("DistributedKvDataManagerEncryptTest") {
  module_out_path = module_output_path

  sources = [ "unittest/distributed_kv_data_manager_encrypt_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("LocalSubscribeStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/local_subscribe_store_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("LocalSubscribeDeviceStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/local_subscribe_device_store_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("SingleKvStoreClientQueryTest") {
  module_out_path = module_output_path

  sources = [ "unittest/single_kvstore_client_query_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("SingleKvStoreClientTest") {
  module_out_path = module_output_path

  sources = [ "unittest/single_kvstore_client_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("SingleKvStoreAsyncGetTest") {
  module_out_path = module_output_path

  sources = [ "unittest/single_kvstore_async_get_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("DeviceKvStoreTest") {
  module_out_path = module_output_path

  sources = [ "unittest/device_kvstore_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("BlobTest") {
  module_out_path = module_output_path

  sources = [ "unittest/blob_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("TypesUtilTest") {
  module_out_path = module_output_path

  sources = [ "unittest/types_util_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("KvUtilTest") {
  module_out_path = module_output_path

  sources = [ "unittest/kv_utils_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("KvstoreDatashareBridgeTest") {
  module_out_path = module_output_path

  sources = [ "unittest/kvstore_datashare_bridge_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    ":distributeddatafwk_src_file",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter:distributeddata_adapter",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("DistributedDataMgrTest") {
  module_out_path = module_output_path

  sources = [ "unittest/distributed_data_mgr_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//third_party/googletest:gtest_main",
  ]
}

ohos_unittest("EndPointTest") {
  module_out_path = module_output_path

  sources = [ "unittest/end_point_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":distributeddatafwk_src_file",
    "//third_party/googletest:gtest_main",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":BlobTest",
    ":DeviceKvStoreTest",
    ":DistributedDataMgrTest",
    ":DistributedKvDataManagerEncryptTest",
    ":DistributedKvDataManagerTest",
    ":EndPointTest",
    ":KvUtilTest",
    ":KvstoreDatashareBridgeTest",
    ":LocalSubscribeDeviceStoreTest",
    ":LocalSubscribeStoreTest",
    ":SingleKvStoreAsyncGetTest",
    ":SingleKvStoreClientQueryTest",
    ":SingleKvStoreClientTest",
    ":TypesUtilTest",
  ]
}
